--- a/kubernetes/dev-pod.Yaml
+++ b/kubernetes/dev-pod.Yaml
@@ -13,7 +13,7 @@ spec:
    spec:
      containers:
      - name: xiaomweb
-       image: xiaomweb:v1.0
+       image: 39.101.135.227:85/harbor/nginx:latest
 
 ---
 apiVersion: v1
