--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
     server {
         listen 9000;
         server_name localhost;
-        root /usr/share/nginx/dist;
+        root /home;
         autoindex on;
         autoindex_exact_size off;
         autoindex_localtime on;
